syntax = "proto3";

option go_package = "github.com/common/dto/protos/v1";

import "google/protobuf/timestamp.proto";
// import "google/protobuf/any.proto";
import "password.proto";
import "email.proto";
import "personal.proto";

// The response message containing the greetings
message User {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    string logindID = 4;
    string loginType = 5;
    string loginSource = 6;
    Password password = 7;
    Personal personal = 8;
    repeated Email emails = 9;
}
