syntax = "proto3";

option go_package = "github.com/common/dto/protos/user/v2";

import "google/protobuf/timestamp.proto";
// import "google/protobuf/any.proto";

message CredentialPassword {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    string userID = 4;
    string value = 5;
}

message CredentialToken {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    string userID = 4;
    string value = 5;
}