syntax = "proto3";

option go_package = "github.com/common/dto/protos/user/v2";

import "google/protobuf/timestamp.proto";
// import "google/protobuf/any.proto";


message PaymentType {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    string name = 4;
}

message PaymentMethod {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    string userID = 4;
    string paymentTypeID = 5;
    PaymentType paymentType = 6;
    string identity = 7;
    string option = 8;
}